--- a/index.html
+++ b/index.html
@@ -2,15 +2,21 @@
 <html lang="es">
 <head>
   <meta charset="UTF-8">
-  <title>LED Controller</title>
+  <title>LED Controller + LiveHeats</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <h1>Control de LEDs</h1>
-  
+
+  <div>
+    <h2>Evento LiveHeats:</h2>
+    <p id="eventName">Cargando...</p>
+  </div>
+
   <input type="color" id="colorPicker">
   <button id="applyColor">Aplicar color</button>
 
   <script src="script.js"></script>
 </body>
 </html>
+
